{
    "name": "Player Controls",
    "maps": [
        {
            "name": "Player",
            "id": "a01553ec-e901-4201-a83b-bee36d017c28",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "06d8249c-65ed-46a8-a6ff-f49d30af5469",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "7cbc45f0-799d-4cfa-93fd-b2e1d4410d67",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4b40d5cc-650e-4edf-9f79-cb0fadb76561",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player Controls",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "509775eb-abd3-4706-8a38-379ad542762a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player Controls",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "72889878-9667-4427-8fa5-d5720dab8369",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player Controls",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b51c5334-821d-4043-95e3-a0c683b3751c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player Controls",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "f6d280a1-3143-4319-9bcd-4d12a78b4d3f",
            "actions": [
                {
                    "name": "OpenChat",
                    "type": "Button",
                    "id": "ea1e5306-d65f-47fb-b89a-799aac17865a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseChat",
                    "type": "Button",
                    "id": "bd8d5256-f7de-4b00-a6a6-718628f98650",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SendChat",
                    "type": "Button",
                    "id": "c0a98e35-1c29-49e9-b26a-6d15e48424bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Remove",
                    "type": "Button",
                    "id": "a09d9fc4-0c15-4c79-8abd-011dc4ccda92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4ba0997b-b6d9-435e-8cd8-69d4de6ab117",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenChat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "745d83e5-af13-4552-802f-4b927422d3b4",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SendChat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88639e61-cc3d-4eed-8d82-c684c963b3c8",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SendChat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8632df59-72de-45fe-9e4b-ea613b0a0459",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseChat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c8994b7-95bb-486f-b39a-5328b585ef2f",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Remove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player Controls",
            "bindingGroup": "Player Controls",
            "devices": []
        }
    ]
}